feat: nfts minting

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,13 @@
 @layer base {
   :root {
     --accent: oklch(0.48 0.1595 305.83);
+    --dark-accent: oklch(0.4 0.1595 305.83);
+    --inactive-accent: oklch(0.3 0.1595 305.83);
   }
 
   * {
     @apply font-(family-name:--karla) font-normal;
-    @apply select-none touch-manipulation transition-all;
+    @apply select-none touch-manipulation;
   }
 
   body {
