--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,23 @@
     @apply cursor-pointer;
   }
 
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
+    display: none;
+  }
+
+  input[type="search"]::-moz-search-clear {
+    display: none;
+  }
+
+  input[type="search"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+
   @keyframes swing-r {
     0%,
     100% {
